--- a/contacts/index.html
+++ b/contacts/index.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Andrea Coffetti</title>
+    <meta property="og:title" content="Andrea Coffetti" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://cofandrea.github.io./" />
+    <meta property="og:image" content="https://production-gameflipusercontent.fingershock.com/us-east-1:ebada6d9-aeb4-42f8-82e3-187c4e605530/af157c30-d373-4a0b-a1a3-1bf403aac593/579a7500-f3c3-4624-bae7-f30bdc962c4c/640x640.webp" />
+    <link rel="icon" type="image/x-icon" href="/assets/img/favicon/favicon.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="/assets/style/style.css">
 </head>
